[tool.poetry]
name = "pythonsystem"
version = "0.1.0"
description = ""
authors = ["wayne011872 <wayne011872@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psutil = "^5.9.4"
pythongeneral = {path = "../pythonGeneral"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
